# ElectroCat

./: .dev.env  .gitignore  .pre-commit-config.yaml  .secrets.env  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  sitemap.xml
.github/: settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint-commits.yml  lint-pr-title.yml  release.yml
about/acknowledgements/: index.html
about/changelog/: index.html
about/citation/: index.html
about/license/: index.html
dev/contributing/: index.html
dev/docs/: index.html
docs/: index.md
docs/user/: install.md
reference/SUMMARY/: index.html
search/: search_index.json
user/examples/: index.html
user/install/: index.html
user/intro/: index.html
